# esp32-plant-monitoring

./: .gitignore  CMakeLists.txt  README.md
components/espressif__ssd1306/: ssd1306.c
components/espressif__ssd1306/include/: ssd1306.h
main/: CMakeLists.txt  i2c.h  main.c  sensor_data.h  wifi.h  wifi_secrets.h.example
main/components/: buzz.c  control.c  control.h  rgb.c  rgb.h
main/components/sensors/: lightSensor.c  lightSensor.h  soilSensor.h
main/layouts/: humidity_screen.c  humidity_screen.h
main/peripherals/: button.c  button.h  buzz.c  buzz.h  rgb.c  rgb.h
main/screen/: animation_play.c  animation_play.h  animations.c  animations.h  bitmap.c  bitmap.h  display_text.c  display_text.h  leaf_animation.c  leaf_animation.h  screen_manager.c  screen_manager.h  settings_animation.c  settings_animation.h
main/sensors/: soilSensor.h  tempSensor.h
utils/: Doom.mid  midi_to_c_arr.py  requirements.txt  serial_to_csv.py
utils/Midi/: KendrickTvOff.mid  README.md  megalovania_piano.mid.mid
