idf_component_register(SRCS "main.c" 
                            "peripherals/buzz.c" 
                            "peripherals/rgb.c" 
                            "sensors/lightSensor.c" 
                            "peripherals/button.c" 
                            "screen/animations.c" 
                            "screen/animation_play.c" 
                            "layouts/humidity_screen.c"
                            "screen/display_text.c"
                            "screen/bitmap.c"
                    INCLUDE_DIRS "." "./peripherals" "./sensors" "./layouts" "./screen")
